--- a/google-clone/.vscode/launch.json
+++ b/google-clone/.vscode/launch.json
@@ -11,7 +11,8 @@
             "type": "dart",
             "args": [
                 "--web-port=5000",
-                "--web-enable-expression-evaluation"
+                "--web-enable-expression-evaluation",
+                "--disable-web-security --user-data-dir 'a-temp-location"
             ],
         }
     ]
